Jaeksoft Open Search Server
http://www.open-search-server.com
-----------------------
CHANGE LOG

All new features and bugs are described here:
http://sourceforge.net/tracker/?group_id=260863

Open Search Server 1.2

New features:
- 3036262: Log management
- 3031800: Schema interface
- 3031204: Adding NGram support
- 3008440: Index replication
- 3026212: API and interface for document deletion
- 3023327: Sub domain extraction in Web Crawler
- 2820289: Database crawler
- 3019035: Neglight dynamic url while crawling 
- 3017277: Allow wildcard query in the URL browser
- 3016491: Url Exporter
- 3016566: Monitoring API
- 3015939: Cluster collapsing
- 2830490: Size of the index
- 3011847: Score explanation
- 3008633: Possibility to turn off the highlighting
- 2997836: In the returned fields having extra fields from Meta tags
- 2997826: Possibility to index only the specified content
- 2991252: Possibility to index binary file and to add it to a document
- 2982545: Extracting term frequency informations
- 2881385: API to retrieve the available indice
- 2887376: Enhancement for the index page - dropping indexes
- 2881388: API to list/create/modify fields in a specified schema
- 2973374: Upgrade to ZKoss 5.0.x	
- 2970747: Upgrade Tomcat to version 6.0.26
- 2966139: Statistics lost when OSS restart
- 2964704: Upgrade to Lucene 2.9.x
- 2958015: Add source archive
- 2958005: Upgrade Apache HttpClient library to 4.0.1	
- 2956498: Provide a way to send statistics report by email
- 2953803: Upgrade to PDFBox 1.0	
- 2953802: Upgrade to POI 3.6
- 2953575: Charset detection should look at meta http-equiv
- 2953524: Specify default charset for parser
- 2929332: Faceting post collapsing
- 2900462: Upgrade POI to 3.5 for xlsx and docs support
- 2900449: Upgrade PDFBox to 0.8

Bug fixes:
- 2881689: Requests.xml fails to rotate on some Windows platforms
- 3019491: NullPointerException > at java.util.regex.Matcher
- 3017481: The web crawler selects the host in alphabetical order