@@ -30,6 +30,8 @@ import java.util.Iterator;
 import java.util.List;
 
 import org.apache.lucene.analysis.TokenStream;
+import org.apache.lucene.analysis.tokenattributes.OffsetAttribute;
+import org.apache.lucene.analysis.tokenattributes.PositionIncrementAttribute;
 import org.apache.lucene.analysis.tokenattributes.TermAttribute;
 import org.apache.lucene.util.AttributeSource;
 
@@ -37,6 +39,8 @@ public class DebugTokenFilter extends org.apache.lucene.analysis.TokenFilter {
 
 	private ClassFactory classFactory;
 	private TermAttribute termAtt;
+	private PositionIncrementAttribute posIncrAtt;
+	private OffsetAttribute offsetAtt;
 	private List<String> termList;
 	private List<AttributeSource.State> stateList;
 	private Iterator<AttributeSource.State> cacheIterator;
@@ -48,6 +52,8 @@ public class DebugTokenFilter extends org.apache.lucene.analysis.TokenFilter {
 		stateList = new ArrayList<AttributeSource.State>();
 		cacheIterator = null;
 		this.termAtt = (TermAttribute) addAttribute(TermAttribute.class);
+		this.posIncrAtt = (PositionIncrementAttribute) addAttribute(PositionIncrementAttribute.class);
+		this.offsetAtt = (OffsetAttribute) addAttribute(OffsetAttribute.class);
 	}
 
 	@Override
@@ -55,7 +61,9 @@ public class DebugTokenFilter extends org.apache.lucene.analysis.TokenFilter {
 		if (cacheIterator == null) {
 			while (input.incrementToken()) {
 				stateList.add(captureState());
-				termList.add(termAtt.term());
+				termList.add(termAtt.term() + " [" + offsetAtt.startOffset()
+						+ ',' + offsetAtt.endOffset() + " - "
+						+ posIncrAtt.getPositionIncrement() + ']');
 			}
 			cacheIterator = stateList.iterator();
 			return false;
