@@ -9,6 +9,7 @@ http://sourceforge.net/tracker/?group_id=260863
 Open Search Server 1.2
 
 New features:
+- 3038733: Add a shingle filter
 - 3036262: Log management
 - 3031800: Schema interface
 - 3031204: Adding NGram support
